--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Boppo App</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.jsx" type="text/jsx"></script>
+    <script src="../src/index.js" type="text/js"></script>
   </body>
 </html>
